# tauri-app-template

./: README.md  index.html  package.json  pnpm-lock.yaml  prettier.config.cjs  tailwind.config.js  tsconfig.json  vite.config.ts
src/: main.ts
src-tauri/: Cargo.toml  tauri.conf.json
